# CSE5825_BML

./: .gitignore  LICENSE  README.md  flake.nix  load.py  pyproject.toml  vis.ipynb
notebooks/: analyisi.ipynb  analysis_embedding.ipynb  dataloader.ipynb  lr_range_test.ipynb  vis.ipynb  vis_filtered_puzzles.ipynb  vis_puzzle.ipynb  vis_quiet_puzzles.ipynb
scripts/: analyisi.py  create_dataset.py  filter_puzzles.py  mine_quiet_boards.py  mine_quiet_boards_preeval.py  run_script.sh  train.py  train_gat.py  train_not_plain.py  train_plain.py  train_vit.py  validate_sanity.py  validate_sanity2.py
src/beschess/: analysis.py  packed.py  utils.py  viz.py
src/beschess/analysis/: __init__.py  stockfish.py
src/beschess/components/: loss.py  sanity.py  train.py  train_sanity.py  utils.py  validate_sanity.py
src/beschess/components/net/: block.py  gnn.py  resnet.py  vit.py
src/beschess/data/: embedding.py
src/beschess/load/: __init__.py  load_game.py  load_puzzle.py
test/: test_block.py  test_embedding.py  test_model.py  test_puzzledataset.py  test_stockfish.py
